--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   backend:
     build:
@@ -7,8 +5,7 @@ services:
       dockerfile: Dockerfile
     environment:
       - DATABASE_URL=postgresql://user:password@db:5432/uppass
-      - SECRET_KEY=dev-secret-key
-      - DEK_KEY=dev-dek-key
+      - DEK_KEY=${DEK_KEY}
       - PRIVATE_KEY_PATH=/app/certs/private_key.pem
     volumes:
       - ./certs:/app/certs
@@ -27,6 +24,7 @@ services:
       - postgres_data:/var/lib/postgresql/data
     networks:
       - internal
+      - public
     ports:
       - "5432:5432"
 
@@ -34,6 +32,7 @@ services:
     build:
       context: ./nginx
     ports:
+      - "80:80"
       - "443:443"
     networks:
       - public
