--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
     environment:
       - DATABASE_URL=postgresql://user:password@db:5432/uppass
       - DEK_KEY=${DEK_KEY}
+      - HMAC_KEY=${HMAC_KEY}
       - PRIVATE_KEY_PATH=/app/certs/private_key.pem
     volumes:
       - ./certs:/app/certs
